src/test/deca/context/valid/created/sans_objet/operateur_arith_2.deca
// Description:
//    Programme minimaliste utilisant operateur arith.
//
// Resultats:
//  
//
// Historique:
//    cree le 13/01/2024

{
        int a = 2;
        int b = 1;
        int x= a + b ;
}