src/test/deca/context/invalid/created/sans_objet/affect_incompatible_1.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 13/01/2024

{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
